--- a/app/views/appeal/appeals/v2/appeal-details.html
+++ b/app/views/appeal/appeals/v2/appeal-details.html
@@ -9,39 +9,39 @@
 {% set prototypeLinks = [
 
   {
-    href: '?procedure=&questionnaire=&lpa-statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&lpa-proofs=',
+    href: '?procedure=&questionnaire=&lpa-statement=&final-comments=&appellant-final-comments=&appeal-decided=&proofs=&lpa-proofs=',
     text: 'New appeal (not validated)'
   },
   {
-    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&complete&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&lpa-proofs=',
+    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&complete&final-comments=&appellant-final-comments=&appeal-decided=&proofs=&lpa-proofs=',
     text: 'LPA questionnaire and statement done'
   },
   {
-    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&complete&final-comments=due&appellant-final-comments=&evidence=&appeal-decided=&proofs=&lpa-proofs=',
+    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&complete&final-comments=due&appellant-final-comments=&appeal-decided=&proofs=&lpa-proofs=',
     text: 'Final-comments due'
   },
   {
-    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&complete&final-comments=complete&appellant-final-comments=&evidence=&appeal-decided=&proofs=&lpa-proofs=',
+    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&complete&final-comments=complete&appellant-final-comments=&appeal-decided=&proofs=&lpa-proofs=',
     text: 'Final-comments done'
   },
   {
-    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=&proofs=&lpa-proofs=',
+    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&complete&final-comments=complete&appellant-final-comments=complete&appeal-decided=&proofs=&lpa-proofs=',
     text: 'All final-comments done'
   },
   {
-    href: '?procedure=inquiry&questionnaire=complete&lpa-statement=complete&complete&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=due&lpa-proofs=',
-    text: 'Inquiry: Proofs due'
+    href: '?procedure=inquiry&questionnaire=complete&lpa-statement=complete&complete&final-comments=&appellant-final-comments=&appeal-decided=&proofs=due&lpa-proofs=',
+    text: 'Inquiry: Proof due'
   },
   {
-    href: '?procedure=inquiry&questionnaire=complete&lpa-statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=&evidence=&appeal-decided=&proofs=complete&lpa-proofs=',
-    text: 'Inquiry: Proofs done'
+    href: '?procedure=inquiry&questionnaire=complete&lpa-statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=&appeal-decided=&proofs=complete&lpa-proofs=',
+    text: 'Inquiry: Proof done'
   },
   {
-    href: '?procedure=inquiry&questionnaire=complete&lpa-statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=&proofs=complete&lpa-proofs=complete',
-    text: 'Inquiry: All proofs done'
+    href: '?procedure=inquiry&questionnaire=complete&lpa-statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&appeal-decided=&proofs=complete&lpa-proofs=complete',
+    text: 'Inquiry: All proof done'
   },
   {
-    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=complete&proofs=&lpa-proofs=',
+    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&appellant-statement=complete&final-comments=complete&appellant-final-comments=complete&appeal-decided=complete&proofs=&lpa-proofs=',
     text: 'Appeal decided'
   }
   ]
