Rule 6 appeal views

--- a/app/views/_includes/rule-6/table-final-comments.html
+++ b/app/views/_includes/rule-6/table-final-comments.html
@@ -1,4 +1,4 @@
-{% set appellantStatement = 'Aliquam semper libero turpis. Proin nisl leo, fringilla quis pharetra a, vestibulum vitae velit. Quisque scelerisque iaculis dolor, nec pretium justo venenatis mollis.
+{% set appellantStatement = 'Suspendisse tincidunt libero eu enim tempor porttitor. Aliquam semper libero turpis. Proin nisl leo, fringilla quis pharetra a, vestibulum vitae velit. Quisque scelerisque iaculis dolor, nec pretium justo venenatis mollis.
   ' %}
 
 {{ govukSummaryList({
