--- a/app/views/appeal/appeals/index.html
+++ b/app/views/appeal/appeals/index.html
@@ -22,7 +22,7 @@
     </h1>
 
     <p class="govuk-body">
-      Bringing the appeal details view from the LPA dashboard to the appellant / agent dashboard
+      Appellant and agent list of appeals.
     </p>
 
     {% set version = "2" %}
