--- a/app/views/index.html
+++ b/app/views/index.html
@@ -120,7 +120,7 @@
         </li>
       </ul>
 
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-2" id="rule-6">
         Rule 6 appeal details
       </h3>
       <p class="govuk-body">
