Removing EIA section duplicate questions

--- a/app/views/manage/questionnaire/index.html
+++ b/app/views/manage/questionnaire/index.html
@@ -38,6 +38,9 @@
       <li>
         simplification of Planning officer’s report section title
       </li>
+      <li>
+        removed environmental impact assessment site notice and responses questions
+      </li>
     </ul>
 
     {{ govukButton({
