--- a/app/views/interested/rule-6/v1/appeal-details.html
+++ b/app/views/interested/rule-6/v1/appeal-details.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = "Appeal "+data['appealCode'] %}
+{% set title = "Appeal "+(data['appealCode'] or '0123456') %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
