--- a/app/views/interested/rule-6/v1/appellant-submission-full.html
+++ b/app/views/interested/rule-6/v1/appellant-submission-full.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = "Appeal "+data['appealCode'] %}
+{% set title = "Appeal "+(data['appealCode'] or '0123456') %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -30,7 +30,7 @@
 
   <div class="govuk-grid-column-full">
     <!-- appeal submission -->
-    {% include "_includes/appellant/table-full-submission.html" %}
+    {% include "_includes/rule-6/table-full-submission.html" %}
 
   </div>
 </div>
