--- a/app/views/interested/rule-6/v1/lpa-final-comments.html
+++ b/app/views/interested/rule-6/v1/lpa-final-comments.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = "Appeal "+data['appealCode'] or '1345264' %}
+{% set title = "Local planning authority final comments" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -18,7 +18,7 @@
       Appeal {{ data['appealCode'] or '1345264' }}
     </span>
     <h1 class="govuk-heading-xl">
-      Local planning authority final comments
+      {{ title }}
     </h1>
   </div>
 
