--- a/app/views/interested/rule-6/v1/lpa-proofs.html
+++ b/app/views/interested/rule-6/v1/lpa-proofs.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = "Appeal "+data['appealCode'] %}
+{% set title = "Local planning authority proof of evidence" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -18,7 +18,7 @@
       Appeal {{ data['appealCode'] or '1345264' }}
     </span>
     <h1 class="govuk-heading-xl">
-      Local planning authority proof of evidence
+      {{ title }}
     </h1>
 
   </div>
@@ -30,7 +30,7 @@
 
   <div class="govuk-grid-column-full">
     <!-- appeal submission -->
-    {% include "_includes/appellant/table-lpa-proofs.html" %}
+    {% include "_includes/rule-6/table-lpa-proofs.html" %}
 
   </div>
 </div>
