--- a/app/views/interested/rule-6/v1/rule6-statement.html
+++ b/app/views/interested/rule-6/v1/rule6-statement.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = "Appeal "+data['appealCode'] %}
+{% set title = "Your statement" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -18,7 +18,7 @@
       Appeal {{ data['appealCode'] or '1345264' }}
     </span>
     <h1 class="govuk-heading-xl">
-      Your statement
+      {{ title }}
     </h1>
   </div>
 
