--- a/app/views/interested/rule-6/v1/appeal-details.html
+++ b/app/views/interested/rule-6/v1/appeal-details.html
@@ -9,51 +9,47 @@
 {% set prototypeLinks = [
 
   {
-    href: '?procedure=&questionnaire=&lpa-statement=&rule6-statement=&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
+    href: '?procedure=&questionnaire=&lpa-statement=&rule6-statement=&r6-statement=&final-comments=&r6-final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
     text: 'New appeal (not validated)'
   },
   {
-    href: '?procedure=written&questionnaire=&lpa-statement=&rule6-statement=due&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
-    text: 'Questionnaire and statements due'
+    href: '?procedure=written&questionnaire=complete&lpa-statement=&rule6-statement=due&r6-statement=&complete&final-comments=&r6-final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
+    text: 'Appeal started / statements due'
   },
   {
-    href: '?procedure=written&questionnaire=complete&lpa-statement=&rule6-statement=due&complete&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
-    text: 'LPA questionnaire done / statements due'
-  },
-  {
-    href: '?procedure=written&questionnaire=complete&lpa-statement=&rule6-statement=complete&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
+    href: '?procedure=written&questionnaire=complete&lpa-statement=&rule6-statement=complete&r6-statement=&final-comments=&r6-final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
     text: 'Rule 6 statement done'
   },
   {
-    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
+    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&final-comments=&r6-final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
     text: 'All statements done'
   },
   {
-    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=due&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
+    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&final-comments=due&r6-final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
     text: 'Final-comments due'
   },
   {
-    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=complete&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
+    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&final-comments=complete&r6-final-comments=complete&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
     text: 'Final-comments done'
   },
   {
-    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=complete&lpa-final-comments=complete&appellant-final-comments=complete&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
+    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&final-comments=complete&lpa-final-comments=complete&r6-final-comments=&appellant-final-comments=complete&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=',
     text: 'All final-comments done'
   },
   {
-    href: '?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=due&lpa-proofs=&appellant-proofs=',
+    href: '?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&final-comments=&r6-final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=due&lpa-proofs=&appellant-proofs=',
     text: 'Inquiry: Proof due'
   },
   {
-    href: '?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=complete&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=complete&lpa-proofs=&appellant-proofs=',
+    href: '?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&final-comments=complete&r6-final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=complete&lpa-proofs=&appellant-proofs=',
     text: 'Inquiry: Proof done'
   },
   {
-    href: '?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=complete&appellant-final-comments=complete&appeal-decided=&proofs=complete&lpa-proofs=complete&appellant-proofs=complete',
+    href: '?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&final-comments=complete&r6-final-comments=&appellant-final-comments=complete&appeal-decided=&proofs=complete&lpa-proofs=complete&appellant-proofs=complete',
     text: 'Inquiry: All proof done'
   },
   {
-    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=complete&appellant-final-comments=complete&lpa-final-comments=complete&appeal-decided=complete&proofs=&lpa-proofs=&appellant-proofs=',
+    href: '?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&final-comments=complete&r6-final-comments=complete&appellant-final-comments=complete&lpa-final-comments=complete&appeal-decided=complete&proofs=&lpa-proofs=&appellant-proofs=',
     text: 'Appeal decided'
   }
   ]
@@ -226,7 +222,27 @@
       </p>
       {% endif %}
 
+      {% if data['r6-statement'] == 'complete' %}
+        <p class="govuk-body">
+          <a href="r6-statement">
+            View statements from other parties
+          </a>
+        </p>
+      {% endif %}
+
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--m">
+
+      <h2 class="govuk-heading-l">
+        Interested party comments
+      </h2>
+
+      <p class="govuk-body">
+        <a href="ip-comments">
+          View interested party comments
+        </a>
+      </p>
+
+
     {% endif %}
 
     {% if data['procedure'] == 'inquiry' %}
@@ -291,6 +307,14 @@
           <p class="govuk-body">
             <a href="lpa-final-comments">
               View local planning authority final comments
+            </a>
+          </p>
+        {% endif %}
+
+        {% if data['r6-final-comments'] == 'complete' %}
+          <p class="govuk-body">
+            <a href="r6-final-comments">
+              View final comments from other parties
             </a>
           </p>
         {% endif %}
