--- a/app/views/index.html
+++ b/app/views/index.html
@@ -129,62 +129,57 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=&questionnaire=&lpa-statement=&rule6-statement=&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
+          <a href="/interested/rule-6/v1/appeal-details?procedure=&questionnaire=&lpa-statement=&rule6-statement=&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&lpa-final-comments=&r6-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
             New appeal (not validated)
           </a>
         </li>
         <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=&lpa-statement=&rule6-statement=due&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
-            Questionnaire and statements due
+          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=&lpa-statement=&rule6-statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&lpa-final-comments=&r6-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
+            Statements due
           </a>
         </li>
         <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=&rule6-statement=due&complete&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
-            LPA questionnaire done / statements due
-          </a>
-        </li>
-        <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=&rule6-statement=complete&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
+          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=&rule6-statement=complete&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&lpa-final-comments=&r6-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
             Rule 6 statement done
           </a>
         </li>
         <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
+          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=&appellant-final-comments=&lpa-final-comments=&r6-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
             All statements done
           </a>
         </li>
         <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=due&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
+          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=due&appellant-final-comments=&lpa-final-comments=&r6-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
             Final-comments due
           </a>
         </li>
         <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=complete&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
+          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&lpa-final-comments=&r6-final-comments=&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
             Final-comments done
           </a>
         </li>
         <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=complete&lpa-final-comments=complete&appellant-final-comments=complete&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
+          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&lpa-final-comments=complete&appellant-final-comments=complete&r6-final-comments=complete&appeal-decided=&proofs=&lpa-proofs=&appellant-proofs=">
             All final comments done
           </a>
         </li>
         <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=due&lpa-proofs=&appellant-proofs=">
+          <a href="/interested/rule-6/v1/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=due&lpa-proofs=&appellant-proofs=">
             Inquiry: Proof of evidence due
           </a>
         </li>
         <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=complete&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=complete&lpa-proofs=&appellant-proofs=">
+          <a href="/interested/rule-6/v1/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&lpa-final-comments=&appeal-decided=&proofs=complete&lpa-proofs=&appellant-proofs=">
             Inquiry: Proof of evidence done
           </a>
         </li>
         <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=complete&appellant-final-comments=complete&appeal-decided=&proofs=complete&lpa-proofs=complete&appellant-proofs=complete">
+          <a href="/interested/rule-6/v1/appeal-details?procedure=inquiry&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&appeal-decided=&proofs=complete&lpa-proofs=complete&appellant-proofs=complete">
             Inquiry: All proof done
           </a>
         </li>
         <li>
-          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&final-comments=complete&appellant-final-comments=complete&lpa-final-comments=complete&appeal-decided=complete&proofs=&lpa-proofs=&appellant-proofs=">
+          <a href="/interested/rule-6/v1/appeal-details?procedure=written&questionnaire=complete&lpa-statement=complete&rule6-statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&lpa-final-comments=complete&appeal-decided=complete&proofs=&lpa-proofs=&appellant-proofs=">
             Appeal decided
           </a>
         </li>
