LPA Rule 6 appeal view content and tidy up, links

--- a/app/views/_includes/rule-6/table-ip-comments.html
+++ b/app/views/_includes/rule-6/table-ip-comments.html
@@ -34,7 +34,7 @@
   rows: [
     {
       key: {
-        html: 'Final comments',
+        html: 'Comments',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -54,7 +54,7 @@
   rows: [
     {
       key: {
-        html: 'Final comments',
+        html: 'Comments',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -74,7 +74,7 @@
   rows: [
     {
       key: {
-        html: 'Final comments',
+        html: 'Comments',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -94,7 +94,7 @@
   rows: [
     {
       key: {
-        html: 'Final comments',
+        html: 'Comments',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -114,7 +114,7 @@
   rows: [
     {
       key: {
-        html: 'Final comments',
+        html: 'Comments',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -134,7 +134,7 @@
   rows: [
     {
       key: {
-        html: 'Final comments',
+        html: 'Comments',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -154,7 +154,7 @@
   rows: [
     {
       key: {
-        html: 'Final comments',
+        html: 'Comments',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -174,7 +174,7 @@
   rows: [
     {
       key: {
-        html: 'Final comments',
+        html: 'Comments',
         classes: 'govuk-!-width-one-third'
       },
       value: {
@@ -194,7 +194,7 @@
   rows: [
     {
       key: {
-        html: 'Final comments',
+        html: 'Comments',
         classes: 'govuk-!-width-one-third'
       },
       value: {
