--- a/app/views/appeal/appeals/v2/appeal-details.html
+++ b/app/views/appeal/appeals/v2/appeal-details.html
@@ -211,14 +211,20 @@
 
         <p class="govuk-body">
           <a href="appellant-proofs">
-            View your proof of evidence and witnesses timings
+            View your proof of evidence and witnesses
           </a>
         </p>
 
         {% if data['lpa-proofs'] == 'complete' %}
           <p class="govuk-body">
             <a href="lpa-proofs">
-              View the local planning authorty proof of evidence and witnesses timings
+              View the local planning authorty proof of evidence and witnesses
+            </a>
+          </p>
+
+          <p class="govuk-body">
+            <a href="r6-proofs">
+              View other party proof of evidence and witnesses
             </a>
           </p>
         {% endif %}
