--- a/app/views/index.html
+++ b/app/views/index.html
@@ -240,59 +240,60 @@
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">
         Appeal details
       </h3>
+
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          <a href="/manage/appeals/v8/appeal-details?procedure=&questionnaire=&statement=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=&statement=&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             New appeal
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?procedure=written&questionnaire=due&statement=due&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=due&statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             Questionnaire due
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?procedure=written&questionnaire=complete&statement=due&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=due&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             Questionnaire valid, statement due
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?procedure=written&questionnaire=complete&statement=complete&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=&ip-comments=&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             LPA statement done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?procedure=written&questionnaire=complete&statement=complete&final-comments=due&appellant-final-comments=due&evidence=&appeal-decided=&proofs=&appellant-proofs=">
-            All statements done / final comments due
+          <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=due&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
+            All statements and comments done / final comments due
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?procedure=written&questionnaire=complete&statement=complete&final-comments=complete&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             LPA final comments done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?procedure=written&questionnaire=complete&statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=&proofs=&appellant-proofs=">
             All final comments done
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?procedure=&questionnaire=complete&statement=complete&final-comments=&evidence=complete&appeal-decided=&proofs=due&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=&appellant-final-comments=&evidence=&appeal-decided=&proofs=due&appellant-proofs=">
             Appeal with proof of evidence due
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?procedure=&questionnaire=complete&statement=complete&final-comments=&evidence=complete&appeal-decided=&proofs=complete&appellant-proofs=">
-            Appeal with proof of evidence complete
+          <a href="/manage/appeals/v8/appeal-details?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=&evidence=&appeal-decided=&proofs=complete&appellant-proofs=">
+            Appeal with LPA proof of evidence complete
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?procedure=&questionnaire=complete&statement=complete&final-comments=&evidence=complete&appeal-decided=&proofs=complete&appellant-proofs=complete">
+          <a href="/manage/appeals/v8/appeal-details?appeal-type=inquiry&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=&proofs=complete&appellant-proofs=complete">
             Appeal with all (3rd party) proof of evidence complete
           </a>
         </li>
         <li>
-          <a href="/manage/appeals/v8/appeal-details?procedure=written&questionnaire=complete&statement=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=complete&proofs=&appellant-proofs=">
+          <a href="/manage/appeals/v8/appeal-details?appeal-type=written&questionnaire=complete&statement=complete&r6-statement=complete&ip-comments=complete&final-comments=complete&appellant-final-comments=complete&evidence=&appeal-decided=complete&proofs=&appellant-proofs=">
             Appeal decided
           </a>
         </li>
