--- a/app/views/interested/rule-6/v1/rule6-proofs.html
+++ b/app/views/interested/rule-6/v1/rule6-proofs.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = "Your proof of evidence" %}
+{% set title = "Your proof of evidence and witnesses" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
