--- a/app/views/_includes/lpa/table-lpa-proofs.html
+++ b/app/views/_includes/lpa/table-lpa-proofs.html
@@ -1,6 +1,6 @@
-<h3 class="govuk-heading-l">
-  Proof of evidence
-</h3>
+<h2 class="govuk-heading-l govuk-visually-hidden">
+  Proof of evidence and witness timings
+</h2>
 
 {{ govukSummaryList({
   classes: 'long-answers govuk-!-margin-bottom-9',
