--- a/app/views/appeal/appeals/v2/r6-proofs.html
+++ b/app/views/appeal/appeals/v2/r6-proofs.html
@@ -1,6 +1,6 @@
-{% extends '_layouts/layout-main.html' %}
+{% extends '_layouts/layout-pins.html' %}
 
-{% set title = "Appellant’s proof of evidence and witnesses" %}
+{% set title = "Other party proof of evidence and witnesses" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -8,7 +8,6 @@
 
 <!-- SECTION -->
 <!-- title and decision if there is one -->
-
 
 {% block content %}
 <div class="govuk-grid-row">
@@ -24,13 +23,13 @@
   </div>
 
   <div class="govuk-grid-column-full">
-    {% include "_includes/rule-6/meta-full-appeal.html" %}
+    {% include "_includes/appellant/meta-full-appeal.html" %}
     <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
   </div>
 
   <div class="govuk-grid-column-full">
     <!-- appeal submission -->
-    {% include "_includes/rule-6/table-appellant-proofs.html" %}
+    {% include "_includes/appellant/table-r6-proofs.html" %}
 
   </div>
 </div>
