--- a/app/views/manage/appeals/v8/ip-comments.html
+++ b/app/views/manage/appeals/v8/ip-comments.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-main.html' %}
 
-{% set title = "Appellant’s proof of evidence and witnesses" %}
+{% set title = "Interested party comments" %}
 
 {% block pageTitle %}
   {{ title }} - {{serviceName}} - GOV.UK
@@ -20,19 +20,18 @@
     <h1 class="govuk-heading-xl">
       {{ title }}
     </h1>
-
   </div>
 
   <div class="govuk-grid-column-full">
-    {% include "_includes/rule-6/meta-full-appeal.html" %}
+    {% include "_includes/lpa/meta-full-appeal.html" %}
     <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
   </div>
 
   <div class="govuk-grid-column-full">
-    <!-- appeal submission -->
-    {% include "_includes/rule-6/table-appellant-proofs.html" %}
-
+    {% include "_includes/lpa/table-ip-comments.html" %}
+    <!-- <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l"> -->
   </div>
+
 </div>
 
 {% endblock %}
