--- a/app/views/manage/appeals/v8/meta-full-appeal.html
+++ b/app/views/manage/appeals/v8/meta-full-appeal.html
@@ -31,7 +31,7 @@
       </dt>
       <dd class="govuk-summary-list__value">
         <p class="govuk-body">
-          {% if data['procedure'] != 'inquiry' %}
+          {% if data['appeal-type'] != 'inquiry' %}
             Written representations
           {% else %}
             Inquiry
