Witness timings outline

--- a/app/views/appeal/proofs-of-evidence/index.html
+++ b/app/views/appeal/proofs-of-evidence/index.html
@@ -23,7 +23,7 @@
 
 
     <p class="govuk-body">
-      Main parties can tell us what witnesses they want to bring to an inquiry and what evidence will be heard.
+      Main parties can tell us what what evidence will be heard, what witnesses they want to call and what their witness evidence will be.
     </p>
 
     {% set version = "2" %}
