--- a/app/views/index.html
+++ b/app/views/index.html
@@ -57,7 +57,12 @@
         </li>
         <li>
           <a href="appeal/proofs-of-evidence">
-            Witnesses and timings / proof of evidence
+            Proof of evidence and witnesses
+          </a>
+        </li>
+        <li>
+          <a href="appeal/witness-timings">
+            Witness timings
           </a>
         </li>
       </ul>
